# Signex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.claude/commands/: init.md
.claude/skills/db-query-items/: SKILL.md
.claude/skills/db-save-analysis/: SKILL.md
.claude/skills/db-save-items/: SKILL.md
.claude/skills/db-stats/: SKILL.md
.claude/skills/fetch-github-trending/: SKILL.md
.claude/skills/identity-shape/: SKILL.md
.claude/skills/lens-flash-brief/: SKILL.md
.claude/skills/run-watch/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/update-memory/: SKILL.md
.claude/skills/watch-shape/: SKILL.md
.claude/skills/webhook-notify/: SKILL.md
.claude/skills/webhook-setup/: SKILL.md
.codex/: README.md
.codex/skills/db-save-items/: SKILL.md
.codex/skills/db-source-health/: SKILL.md
.codex/skills/extract-content/: SKILL.md
.codex/skills/fetch-arxiv/: SKILL.md
.codex/skills/fetch-brave-search/: SKILL.md
.codex/skills/fetch-exa/: SKILL.md
.codex/skills/fetch-gnews/: SKILL.md
.codex/skills/fetch-hacker-news/: SKILL.md
.codex/skills/fetch-news-api/: SKILL.md
.codex/skills/fetch-openalex/: SKILL.md
.codex/skills/fetch-x/: SKILL.md
docs/: runtime-compat.md
knowledge/: webhook-setup-guide.md
scripts/: signex  sync-codex-skills
src/runtime/: __init__.py  briefing.py  cli.py  common.py  init_workspace.py  router.py  watch_runner.py
src/store/: database.py  models.py
tests/runtime/: test_init_workspace.py  test_router.py  test_state_update.py  test_watch_runner_selection.py
(+45 files in other folders)
