[project]
name = "intel-station"
version = "0.1.0"
description = "Intent-driven personal intelligence agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
