[project]
name = "signex"
version = "0.1.0"
description = "Intent-driven personal intelligence agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.2",
    "beautifulsoup4>=4.14",
    "feedparser>=6.0",
    "exa-py>=2.4",
    "firecrawl-py>=4.0",
]

[project.scripts]
signex = "src.runtime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
